grammar_to_ply/error_msgs.txt
  File "../programs/python/functions/output_programs/errors/helloworld_2errors_1_error.py", line 1
    NEWLINE missing
                  ^
SyntaxError: invalid syntax
